text and controls no longer overlap

--- a/css/main.css
+++ b/css/main.css
@@ -158,4 +158,8 @@ p, input {
 	.controls {
 		visibility: visible;
 	}
+
+	.todo-text, .edit-text {
+		max-width: 320px;
+	}
 }
